<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/tc_logo"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:contentDescription="@string/tc_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/tc_general_badge" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tc_logo"
        android:paddingTop="24dp">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/prompt"
            android:hint="@string/TC_Email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        >

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/prompt"
            android:hint="@string/password"
            android:inputType="textPassword" />


</android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerInParent="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="-1dp"
        android:fontFamily="@font/prompt"
        android:onClick="logIn"
        android:text="@string/login_button"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/prompt"
        android:onClick="signUp"
        android:text="@string/sign_up_button"
        android:textSize="16sp" />

</RelativeLayout>